--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -1,5 +1,165 @@
 <% include ../partials/header %>
 
-
-
+<div class="jumbotron text-light">
+    <div class="container">
+        <h1>Education Is the Best Legacy</h1>
+        <p>let get started</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row justify-content-between">
+        <div class="col-md-3 col-sm-6">
+            <p class="display-4">Our Aim</p>
+            <p>
+                Lorem ipsum dolor sit, adipisicing elit. Vitae, ab nesciunt modi quos provident omnis iste laboriosam, eum quam sequi voluptatibus reprehenderit nihil aut rerum. Assumenda officiis necessitatibus itaque ratione!
+            </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <p class="display-4">Agenda</p>
+            <p>
+                Lorem ipsum dolor sit, adipisicing elit. Vitae, ab nesciunt modi quos provident omnis iste laboriosam, eum quam sequi voluptatibus reprehenderit nihil aut rerum. Assumenda officiis necessitatibus itaque ratione!
+            </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <p class="display-4">Aspiration</p>
+            <p>
+                Lorem ipsum dolor sit, adipisicing elit. Vitae, ab nesciunt modi quos provident omnis iste laboriosam, eum quam sequi voluptatibus reprehenderit nihil aut rerum. Assumenda officiis necessitatibus itaque ratione!
+            </p>   
+        </div>
+    </div>
+</div>
+<!-- Swiper -->
+<div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" style="background-image:url(http://lorempixel.com/1000/1000/nightlife/2)">Advertise here</div>
+          <div class="swiper-slide">Advertise here</div>
+          <div class="swiper-slide">Advertise here</div>
+          <div class="swiper-slide">Advertise here</div>
+          <div class="swiper-slide">Slide 5</div>
+          <div class="swiper-slide">Slide 6</div>
+          <div class="swiper-slide">Slide 7</div>
+          <div class="swiper-slide">Slide 8</div>
+          <div class="swiper-slide">Slide 9</div>
+          <div class="swiper-slide">Slide 10</div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+</div>
+<!-- Excos -->
+<h4 class="text-center my-5">Excos</h4>
+<div class="container ">
+    <div class="row exco text-center" style="display:flex; flex-wrap:wrap;">
+        <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/d6d4/vtccqbfo627o7bazg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>
+        </div>
+        <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/6dc4/d210n1x2luonix1zg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>
+        </div>
+        <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/1b1e/mj7ceutq672mu8zzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>
+        </div>
+        <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/fc73/a51vsdkfyabv89dzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class=""> President</h5>
+            <p><em>Wale Adeniyi</em></p>  
+        </div>
+        <div class="col-md-4 col-lg-3 col-sm-6 d-lg-none">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/fb92/cw6cuykvr4pu2chzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>  
+        </div>
+        <div class="col-md-4 col-lg-3 col-sm-6 d-lg-none">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/48a6/a2js85s93os9ufkzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>  
+        </div>
+    </div>
+    <!-- alternate -->
+    <div id="alternate" class="d-none d-lg-block">
+    <div class="row text-center justify-content-center">
+        <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/fb92/cw6cuykvr4pu2chzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>  
+        </div>
+            <div class="col-md-4 col-lg-3 col-sm-6">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/48a6/a2js85s93os9ufkzg.jpg" class="card-img-top rounded-circle" alt="">
+            <h5 class="">President</h5>
+            <p>Wale Adeniyi</p>  
+        </div>
+    </div>
+    </div>
+</div>
+<!--  -->
+<div class="container">
+    <div class="row heading justify-content-center">
+        <div class="col-5 text-dark d-none d-md-block"><hr></div><div class="col-2"><h3 class="text-center mb-3 text-success">Activities</h3></div><div class="col-5 d-none d-md-block"><hr></div>
+    </div>
+</div>
+<!-- activities -->
+<div class="jumbotron act">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-graduation-cap"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Action</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-university"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Education</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-person-booth"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Elections</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-user-tie"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Enterprise</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-compact-disc"></i> </span>
+                    <p style="font-size: 1.5em; font-weight:600;">Media</p>    
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-user-graduate"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Postgrad</p>   
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-volleyball-ball"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Sport</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class=" activities">
+                    <span style="font-size: 4.0em;"><i class="fas fa-users"></i></span>
+                    <p style="font-size: 1.5em; font-weight:600;">Societies</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
+<!-- ******************8888 -->
 <% include ../partials/footer %>
