--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -1,3 +1,153 @@
-body{
-    background-color: aqua;
+.jumbotron.text-light {
+  padding-top: 30vh;
+  padding-bottom: 30vh;
+  background-color: #000;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  animation: imageAnimation 35s ease-in 0.5s infinite;
+  /* animation-delay: 0.5s; */
+}
+
+@-webkit-keyframes imageAnimation {
+  0%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+
+  25%{
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  }
+
+  50%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+
+  75%{
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  }
+
+  100%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+}
+
+@keyframes imageAnimation {
+  0%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+
+  25%{
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  }
+
+  50%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+
+  75%{
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+  }
+
+  100%{
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+  }
+}
+
+/* @keyframes imageAnimation { 
+  0% { 
+    opacity: 0; 
+    animation-timing-function: ease-in;
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+  }
+  10% {
+    opacity: 1;
+    animation-timing-function: ease-out;
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+  }
+  20% {
+    opacity: 1
+  }
+  30% {
+    opacity: 0
+  }
+} */
+
+/* Older browser support - .no-cssanimations class added by modernizr */
+.no-cssanimations .slideshow li {
+	opacity: 1;
+}
+
+/* swiper css */
+html, body {
+  position: relative;
+  height: 100%;
+}
+body {
+  background: #eee;
+  font-family: 'Roboto', sans-serif;
+  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+  /* font-size: 14px; */
+  color:#000;
+  margin: 0;
+  padding: 0;
+}
+.swiper-container {
+  width: 100%;
+  height: 30vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+/* ********************************************** */
+
+.activities{
+  padding: 10% 0;
+  margin: 5% auto;
+  border: 6px solid white;
+  color: white;
+  width: 80%;
+}
+
+.activities:hover{
+  background-color: red;
+}
+
+.jumbotron.act{
+  /* background-image: url(https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60); */
+  background-color: rgba(114, 13, 126, 0.9);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+.logo {
+  width: 4%;
+}
+
+.jumbotron.act {
+  padding-top: 3vh;
+  padding-bottom: 3vh;
 }
