--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -48,12 +48,12 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
 </div>
-<!-- Excos -->
+<!-- Excoshttp://www.mediafire.com/convkey/d6d4/vtccqbfo627o7bazg.jpg -->
 <h4 class="text-center my-5">Excos</h4>
 <div class="container ">
     <div class="row exco text-center" style="display:flex; flex-wrap:wrap;">
         <div class="col-md-4 col-lg-3 col-sm-6">
-            <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/d6d4/vtccqbfo627o7bazg.jpg" class="card-img-top rounded-circle" alt="">
+            <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0000.jpg" class="card-img-top rounded-circle" alt="">
             <h5 class="">President</h5>
             <p>Wale Adeniyi</p>
         </div>
