--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,41 +17,44 @@
     <title>Faculty Of Education</title>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
-          <a class="navbar-brand" href="#">
-            <img class="logo d-none d-xl-inline" src="http://www.mediafire.com/convkey/fab5/kud22w2pk60y3j2zg.jpg" alt="Faculty logo">
-            Faculty Of Education
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-            </ul> -->
-            <ul class="navbar-nav ml-auto mr-5 my-lg-0">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
+            <a class="navbar-brand" href="#">
+              <img class="logo d-none d-xl-inline" src="http://www.mediafire.com/convkey/fab5/kud22w2pk60y3j2zg.jpg" alt="Faculty logo">
+              Faculty Of Education
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <!-- <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Faculty Info</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Admin Center</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
-            </ul>
-          </div>
-        </nav>
+              </ul> -->
+              <ul class="navbar-nav ml-auto mr-5 my-lg-0">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Faculty Info</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Admin Center</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Register</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+    </header>
+      
     
