--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,4 @@
-<footer class="mt-3">
-  hjhjhjhkj
-  </footer>
+</div>
 <script src="/javascript/swiper.min.js"></script>
 <!-- Initialize Swiper -->
 <script>
