--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
     <title>Faculty Of Education</title>
   </head>
   <body>
+    <div id="wrapper">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
             <a class="navbar-brand" href="#">
