--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -53,7 +53,7 @@
         </div>
     </section>
         
-    <section>
+    <section id="excos">
         <!-- Excoshttp://www.mediafire.com/convkey/d6d4/vtccqbfo627o7bazg.jpg -->
         <h4 class="text-center my-5">Excos</h4>
         <div class="container ">
@@ -94,60 +94,60 @@
     </section>
             
             <!--  -->
-    <section>
-            <div class="container">
+    <section id="activities">
+            <div class="container mb-4">
                     <div class="row heading justify-content-center">
                         <div class="col-5 text-dark d-none d-md-block"><hr></div><div class="col-2"><h3 class="text-center mb-3 text-success">Activities</h3></div><div class="col-5 d-none d-md-block"><hr></div>
                     </div>
-                </div>
+            </div>
                 <!-- activities -->
                 <div class="jumbotron act">
                     <div class="container">
                         <div class="row text-center">
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="action" >
                                     <span style="font-size: 4.0em;"><i class="fas fa-graduation-cap"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Action</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="education">
                                     <span style="font-size: 4.0em;"><i class="fas fa-university"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Education</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="election">
                                     <span style="font-size: 4.0em;"><i class="fas fa-person-booth"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Elections</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="enterprise">
                                     <span style="font-size: 4.0em;"><i class="fas fa-user-tie"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Enterprise</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="media">
                                     <span style="font-size: 4.0em;"><i class="fas fa-compact-disc"></i> </span>
                                     <p style="font-size: 1.5em; font-weight:600;">Media</p>    
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="postgrad">
                                     <span style="font-size: 4.0em;"><i class="fas fa-user-graduate"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Postgrad</p>   
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="sport">
                                     <span style="font-size: 4.0em;"><i class="fas fa-volleyball-ball"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Sport</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
-                                <div class=" activities">
+                                <div class=" activities" id="society">
                                     <span style="font-size: 4.0em;"><i class="fas fa-users"></i></span>
                                     <p style="font-size: 1.5em; font-weight:600;">Societies</p>
                                 </div>
@@ -272,8 +272,35 @@
         </div>
                     
     </section>
-    <section>
-            
+    
+    <section id="footer">
+        <div class="jumbotron bg-dark mb-0">
+                <div class="container ">
+                        <div class="row text-center">
+                            <div class="col-sm-6 col-md-4">
+                                <h4>SITE LINKS</h4>
+                                <p>Faqs</p>
+                                <p>social</p>
+                                <p>Fresher</p>
+                                <p>Welfare</p>
+                            </div>
+                            <div class="col-sm-6 col-md-4">
+                                <h4>SITE LINKS</h4>
+                                <p>Faqs</p>
+                                <p>social</p>
+                                <p>Fresher</p>
+                                <p>Welfare</p>
+                            </div>
+                            <div class="col-sm-6 col-md-4">
+                                <h4>SITE LINKS</h4>
+                                <p>Faqs</p>
+                                <p>social</p>
+                                <p>Fresher</p>
+                                <p>Welfare</p>
+                            </div>
+                        </div>
+                    </div>
+        </div>
     </section>
             
 </main>
