--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -64,27 +64,27 @@
                     <p>Wale Adeniyi</p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6">
-                    <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/6dc4/d210n1x2luonix1zg.jpg" class="card-img-top rounded-circle" alt="">
+                    <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0004.jpg" class="card-img-top rounded-circle" alt="">
                     <h5 class="">President</h5>
                     <p>Wale Adeniyi</p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6">
-                    <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/1b1e/mj7ceutq672mu8zzg.jpg" class="card-img-top rounded-circle" alt="">
+                    <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0007.jpg" class="card-img-top rounded-circle" alt="">
                     <h5 class="">President</h5>
                     <p>Wale Adeniyi</p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6">
-                    <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/fc73/a51vsdkfyabv89dzg.jpg" class="card-img-top rounded-circle" alt="">
+                    <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0006.jpg" class="card-img-top rounded-circle" alt="">
                     <h5 class=""> President</h5>
                     <p><em>Wale Adeniyi</em></p>  
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6">
-                    <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/fb92/cw6cuykvr4pu2chzg.jpg" class="card-img-top rounded-circle" alt="">
+                    <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0008.jpg" class="card-img-top rounded-circle" alt="">
                     <h5 class="">President</h5>
                     <p>Wale Adeniyi</p>  
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6">
-                    <img style="width:80%; height: 55%; margin: 0 auto;" src="http://www.mediafire.com/convkey/48a6/a2js85s93os9ufkzg.jpg" class="card-img-top rounded-circle" alt="">
+                    <img style="width:80%; height: 55%; margin: 0 auto;" src="/assets/IMG-20190405-WA0005.jpg" class="card-img-top rounded-circle" alt="">
                     <h5 class="">President</h5>
                     <p>Wale Adeniyi</p>  
                 </div>
@@ -165,7 +165,7 @@
                     <h2>Achievements</h2>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6 mb-4">
-                        <div class="card">
+                        <div class="card glow">
                             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Best Student Award</h5>
@@ -175,7 +175,7 @@
                         </div>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6 mb-4">
-                        <div class="card">
+                        <div class="card glow">
                             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Best Student Award</h5>
@@ -185,7 +185,7 @@
                         </div>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6 mb-4">
-                        <div class="card">
+                        <div class="card glow">
                             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Best Student Award</h5>
@@ -195,7 +195,7 @@
                         </div>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6 mb-4">
-                        <div class="card">
+                        <div class="card glow">
                             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Best Student Award</h5>
@@ -205,7 +205,7 @@
                         </div>
                 </div>
                 <div class="col-md-4 col-lg-3 col-sm-6 mb-4">
-                        <div class="card">
+                        <div class="card glow">
                             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Best Student Award</h5>
