--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- additional links -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheet/swiper.min.css">
-    <link rel="shortcut icon" href="http://www.mediafire.com/convkey/fab5/kud22w2pk60y3j2zg.jpg">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/logo.jpg">
     <!-- custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="/stylesheet/main.css">
     <title>Faculty Of Education</title>
@@ -20,8 +20,8 @@
     <div id="wrapper">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
-            <a class="navbar-brand" href="#">
-              <img class="logo d-none d-xl-inline" src="http://www.mediafire.com/convkey/fab5/kud22w2pk60y3j2zg.jpg" alt="Faculty logo">
+            <a class="navbar-brand" href="#"><img class="logo d-none d-xl-inline" src="/assets/logo.jpg" alt="Faculty logo">
+              
               Faculty Of Education
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,19 +39,19 @@
               </ul> -->
               <ul class="navbar-nav ml-auto mr-5 my-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#"  >Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="#"  >About</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Faculty Info</a>
+                      <a class="nav-link" href="#"  >Faculty Info</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Admin Center</a>
+                      <a class="nav-link" href="#"  >Admin</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Register</a>
+                      <a class="nav-link" href="#"  >Register</a>
                   </li>
               </ul>
             </div>
