--- a/views/index/home.ejs
+++ b/views/index/home.ejs
@@ -1,14 +1,14 @@
 <% include ../partials/header %>
 <main>
     <section>
-            <div class="jumbotron text-light">
+            <div class="jumbotron text-light rounded-0">
                     <div class="container">
                         <h1>Education Is the Best Legacy</h1>
                         <p>let get started</p>
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row justify-content-between">
+                    <div class="row justify-content-between text-center">
                         <div class="col-md-3 col-sm-6">
                             <p class="display-4">Our Aim</p>
                             <p>
