--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,19 +39,19 @@
               </ul> -->
               <ul class="navbar-nav ml-auto mr-5 my-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="#"  >Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="/"  >Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"  >About</a>
+                      <a class="nav-link" href="/about"  >About</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"  >Faculty Info</a>
+                      <a class="nav-link" href="/faculty"  >Faculty Info</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"  >Admin</a>
+                      <a class="nav-link" href="/login"  >Authority</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"  >Register</a>
+                      <a class="nav-link" href="/register"  >Register</a>
                   </li>
               </ul>
             </div>
