--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -1,19 +1,20 @@
 <% include ../partials/header %>
 
 <main id="login">
-    <form class="form-signin text-center">
+    <form class="form-signin text-center" action="/login" method="POST">
         <img class="mb-4" src="/assets/logo.jpg" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="text" id="inputtext" class="form-control" name="username" placeholder="username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <small id="Help" class="form-text text-muted">Not an Authorative ? <a href="/">Go back</a> || <a href="/register">Signup</a></small>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
     </form>
 </main>
