--- a/views/index/register.ejs
+++ b/views/index/register.ejs
@@ -6,36 +6,41 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <h1 class="text-center my-5">Create New User</h1>
+                                    <h1 class="text-center my-4">Create New User</h1>
                                 </div>
                                 
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="firstname">First Name</label>
-                                        <input type="text" name="firstname" class="form-control" placeholder="e.g John">
+                                        <label for="firstName">First Name</label>
+                                        <input type="text" name="firstName" class="form-control" placeholder="e.g John" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="lastname">Last Name</label>
-                                        <input type="text" name="lastname" class="form-control" placeholder="e.g Doe">
+                                        <label for="lastName">Last Name</label>
+                                        <input type="text" name="lastName" class="form-control" placeholder="e.g Doe" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
-                                        <input type="text" name="username" class="form-control" placeholder="username"> 
+                                        <input type="text" name="username" class="form-control" placeholder="username" required> 
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="password" class="form-control" placeholder="password"> 
+                                        <input type="text" name="adminCode" class="form-control" placeholder="Admin code (OPTIONAL)"> 
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="confirmpassword" class="form-control" placeholder="confirm password"> 
+                                        <input type="password" name="password" class="form-control password" placeholder="password" required> 
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="confirmpassword" class="form-control confirm-password" title="Your Password Don't Match" placeholder="confirm password" required> 
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <input type="submit" class="btn btn-block btn-primary"> 
+                                        <small id="emailHelp" class="form-text text-muted">Not an Authorative ? <a href="/">Go back</a></small>
                                     </div>
+                                    <p class="mt-5 mb-3 text-muted">&copy; Lasu Faculty Of Education 2019</p>
                                 </div>
                             </div>
                         </div>
