--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
   <body>
     <div id="wrapper">
     <header>
+        
         <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
             <a class="navbar-brand" href="#"><img class="logo d-none d-xl-inline" src="/assets/logo.jpg" alt="Faculty logo">
               
@@ -47,15 +48,53 @@
                   <li class="nav-item">
                       <a class="nav-link" href="/faculty"  >Faculty Info</a>
                   </li>
-                  <li class="nav-item">
+                  <% if(currentUser) { %>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user"></i> <%= currentUser.username %>
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#">Create Activities</a>
+                        <a class="dropdown-item" href="#">Create News</a>
+                        <a class="dropdown-item" href="/login">Change User</a>
+                        <a class="dropdown-item" href="/register">Create new user</a>
+                        <a class="dropdown-item" href="/logout">logout</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="">Authorities</a>
+                    </li>
+                  <% } else{ %>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/register"  >Register</a>
+                    </li>
+                  <% }%>
+                  <!-- <li class="nav-item">
                       <a class="nav-link" href="/login"  >Authority</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="/register"  >Register</a>
-                  </li>
+                  </li> -->
               </ul>
             </div>
           </nav>
+
+          
+              <% if(error && error.length>0) { %>
+                <div class="alert alert-danger text-center mb-0" role="alert">
+                   <%= error %>
+                </div>
+              <% } %>
+              <% if(success && success.length>0) { %>
+                <div class="alert alert-success text-center mb-0" role="alert">
+                     <%= success %>
+                </div>
+              <% } %>
+          
     </header>
       
     
