config heroku vars

--- a/views/achievement/new.ejs
+++ b/views/achievement/new.ejs
@@ -1,6 +1,5 @@
 <% include ../partials/header %>
-    <!-- <div class="row"> -->
-        <h1 style="text-align: center">Create a New Achievement</h1>
+        <h1 style="text-align: center" class="my-5">Create a New Achievement</h1>
         <div style="width: 30%; margin: 25px auto;">
             <form action="/achievement" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
@@ -19,5 +18,5 @@
             </form>
             <a href="/">Go Back</a>
         </div>
-    <!-- </div> -->
+
 <% include ../partials/footer %>
