--- a/views/index/register.ejs
+++ b/views/index/register.ejs
@@ -12,13 +12,13 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="firstName">First Name</label>
-                                        <input type="text" name="firstName" class="form-control" placeholder="e.g John" required>
+                                        <input type="text" name="firstName" id="firstName" class="form-control" placeholder="e.g John" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="lastName">Last Name</label>
-                                        <input type="text" name="lastName" class="form-control" placeholder="e.g Doe" required>
+                                        <input type="text" name="lastName" id="lastName" class="form-control" placeholder="e.g Doe" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
