--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
     <title>Faculty Of Education</title>
   </head>
   <body>
-    <div id="wrapper">
+    <div id="wrapper" class="gray-color">
     <header>
         
         <nav class="navbar navbar-expand-lg navbar-light bg-light  sticky-top">
